refactor: change runtime node to Bun, update Jest configuration, and remove unused files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "types": [
+      "bun-types"
+    ],
     "paths": {
       "@app/*": ["src/*"],
       "@config/*": ["src/config/*"],
