--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nestjs-project-template",
   "version": "1.0.0",
-  "description": "NestJS project structure template with best practices using Fastify, Prisma, MongoDB, and SWC",
+  "description": "NestJS project structure template with best practices using Fastify, Prisma, MongoDB, and Bun",
   "main": "dist/main.js",
   "scripts": {
     "prebuild": "rimraf dist",
@@ -10,19 +10,17 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "bun dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "prepare": "husky",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test": "bun test",
+    "test:watch": "bun test --watch",
+    "test:cov": "bun test --coverage",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy",
     "prisma:studio": "prisma studio",
-    "db:seed": "ts-node prisma/seed.ts",
+    "db:seed": "bun prisma/seed.ts",
     "openapi:export": "curl -s http://localhost:7009/openapi.yaml > openapi/openapi.yaml && echo 'OpenAPI documentation exported from running server to openapi/ directory'"
   },
   "keywords": [],
@@ -32,9 +30,8 @@
     "url": "https://github.com/lifefloating"
   },
   "license": "MIT",
-  "packageManager": "pnpm@10.13.1",
   "engines": {
-    "node": ">=20.0.0"
+    "bun": ">=1.0.0"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.775.0",
@@ -44,6 +41,7 @@
     "@fastify/cors": "^11.0.1",
     "@fastify/helmet": "^13.0.1",
     "@fastify/multipart": "^9.0.3",
+    "@fastify/static": "^8.2.0",
     "@nestjs/common": "^11.0.12",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.12",
@@ -90,10 +88,8 @@
     "@nestjs/cli": "^11.0.5",
     "@nestjs/schematics": "^11.0.2",
     "@nestjs/testing": "^11.0.12",
-    "@swc/cli": "^0.7.0",
-    "@swc/core": "^1.11.13",
     "@types/ali-oss": "^6.16.11",
-    "@types/jest": "^30.0.0",
+    "@types/bun": "^1.1.15",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.13.14",
     "@types/passport-jwt": "^4.0.1",
@@ -107,15 +103,9 @@
     "eslint-plugin-prettier": "5.5.3",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
-    "jest": "^30.0.0",
     "prettier": "^3.5.3",
     "prisma": "^6.5.0",
-    "source-map-support": "^0.5.21",
     "supertest": "^7.1.0",
-    "ts-jest": "^29.3.0",
-    "ts-loader": "^9.5.2",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.28.0"
   }
