--- a/.swcrc
+++ b/.swcrc
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://json.schemastore.org/swcrc",
+  "$schema": "https://swc.rs/schema.json",
   "sourceMaps": true,
   "module": {
     "type": "es6",
