chore(config): update MongoDB configuration for replica set

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ API_VERSION=1.0
 APP_URL=http://localhost:7009
 
 # MongoDB Configuration
-DATABASE_URL=mongodb://localhost:27017/nestjs_practice
+DATABASE_URL=mongodb://localhost:27017/nestjs_practice?replicaSet=rs0
 
 # Auth
 ALLOWED_ORIGINS=localhost:*,127.0.0.1,localhost:7009
