--- a/.github/workflows/deploy-swagger.yml
+++ b/.github/workflows/deploy-swagger.yml
@@ -63,45 +63,35 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
         with:
-          node-version: '22'
-          
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          run_install: false
+          bun-version: latest
 
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - name: Setup pnpm cache
+      - name: Setup Bun cache
         uses: actions/cache@v4
         with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          path: ~/.bun/install/cache
+          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lockb') }}
           restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+            ${{ runner.os }}-bun-
           
       - name: Install dependencies
-        run: pnpm install
+        run: bun install
 
       - name: Generate Prisma client
-        run: pnpm prisma:generate
+        run: bun prisma:generate
         
       - name: Generate OpenAPI documentation
         run: |
           # Start the server in the background
-          pnpm start:dev &
+          bun start:dev &
           
           # Wait for server to be ready (adjust sleep time if needed)
           sleep 15
           
           # Generate OpenAPI documentation
-          pnpm openapi:export
+          bun openapi:export
           
           # Stop the background server process
           kill $(jobs -p)
