feat: enhance documentation

--- a/.env.example
+++ b/.env.example
@@ -85,3 +85,10 @@ GITHUB_CLIENT_SECRET=your_github_client_secret
 # OAuth Providers - Apple (example)
 APPLE_CLIENT_ID=your_apple_client_id
 APPLE_CLIENT_SECRET=your_apple_client_secret
+
+# OAuth Providers - Google (example)
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+
+# Swagger Documentation
+OPEN_API_VERSION=3.1.0
