--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "bun": ">=1.0.0"
   },
   "dependencies": {
+    "@apollo/server": "^5.0.0",
     "@aws-sdk/client-s3": "^3.775.0",
     "@aws-sdk/lib-storage": "^3.775.0",
     "@aws-sdk/s3-request-presigner": "^3.775.0",
@@ -71,6 +72,7 @@
     "dotenv": "^17.0.0",
     "fastify": "^5.2.2",
     "fastify-multer": "^2.0.3",
+    "graphql": "^16.11.0",
     "joi": "^18.0.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
